# elefren

./: Cargo.toml  Makefile  README.md  TODO
.github/: dependabot.yml
.github/workflows/: rust.yml
derive-entity/: Cargo.toml
derive-entity/src/: lib.rs
elefren/: Cargo.toml  Makefile
elefren/src/: entities.rs  lib.rs  mastodon_client.rs  page.rs  status_builder.rs
elefren/src/requests/: update_credentials.rs
entities/: Cargo.toml  Makefile
entities/src/: account.rs  activity.rs  application.rs  attachment.rs  card.rs  context.rs  event.rs  lib.rs  poll.rs  push.rs  status.rs  visibility.rs
entities/src/admin/: account.rs  report.rs
examples/: follow_profile.rs  follows_me.rs  home_timeline.rs  print_your_profile.rs  search.rs  upload_photo.rs
src/: errors.rs  event_stream.rs  lib.rs  macros.rs  mastodon.rs  mastodon_client.rs  mastodon_unauth.rs  page.rs  registration.rs  scopes.rs  util.rs
src/async/: client.rs  mod.rs  page.rs
src/entities/: account.rs  announcement.rs  attachment.rs  card.rs  mod.rs  poll.rs  status.rs
src/entities/admin/: account.rs  mod.rs  report.rs
src/helpers/: env.rs  json.rs  toml.rs
src/requests/: directory.rs  mod.rs  push.rs  statuses.rs  update_credentials.rs  util.rs
