[package]
name = "elefren-entities"
version = "0.1.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/pwoolcoc/elefren.git"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "web-programming::http-client", "api-bindings"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
isolang = { version = "1.0.0", features = ["serde_serialize"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[features]
default = ["mastodon_3_3_0"]
mastodon_1_3_0 = []
mastodon_1_5_0 = ["mastodon_1_3_0"]
mastodon_2_0_0 = ["mastodon_1_5_0"]
mastodon_2_1_0 = ["mastodon_2_0_0"]
mastodon_2_1_2 = ["mastodon_2_1_0"]
mastodon_2_2_0 = ["mastodon_2_1_0"]
mastodon_2_4_0 = ["mastodon_2_2_0"]
mastodon_2_8_0 = ["mastodon_2_4_0"]
mastodon_2_8_1 = ["mastodon_2_8_0"]
mastodon_2_9_1 = ["mastodon_2_8_1"]
mastodon_3_0_0 = ["mastodon_2_9_1"]
mastodon_3_1_0 = ["mastodon_3_0_0"]
mastodon_3_3_0 = ["mastodon_3_1_0"]
